--- a/Main/index.html
+++ b/Main/index.html
@@ -10,8 +10,8 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous" />
     <link rel="stylesheet"
-        href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.9.0/css/bootstrap-datepicker.min.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+        href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.9.0/css/bootstrap-datepicker.min.css" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" />
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-alpha3/dist/js/bootstrap.bundle.min.js"></script>
     <script
@@ -23,119 +23,165 @@
     <header class="header mx-5 col-12 d-flex justify-content-start">
         <h1 class="header">Pork Order Placement Optimization Dashboard</h1>
     </header>
-    <main class="container">
-        <span class="input_metric mx-5 px-5">Input Metrics</span>
-        <div class="col-lg-10 mx-lg-auto d-flex justify-content-evenly one">
-            <div class="col-5 mx-lg-0 input_metric_card ">
-                <div class="pt-3 ">
-                    <span class="mt-1 date">Enter Order Number</span>
-                </div>
-                <div class="">
-                    <form class="d-flex justify-content-center">
-                        <input type="email" class="input_bar col-10 justify-content-center d-flex"
-                            id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter Order Number" />
-                    </form>
-                </div>
-                <div class="mt-3">
-                    <span class="date">Date Range</span>
-                    <div class=" m-0">
-                        <img src="images/calender.svg" style="cursor: pointer;" class="date" id="datepicker" />
-                        <div class="d-flex">
+    <main class="">
+        <div>
+            <p class="mx-5 px-4 input_metric">Input Metrics</p>
+        </div>
 
-                            <p class="d-flex">Capacity
+        <div class="card col-lg-10 mx-auto">
+            <div class="d-flex gap-0">
 
-                            <form class="p-0">
-                                <input type="email" class="input_bar col-5" id="exampleInputEmail1"
-                                    aria-describedby="emailHelp" placeholder="0.5" />
-
-                            </form>
-                            </p>
-
-                        </div>
-
-                    </div>
-                </div>
-                <div class="mt-5 pt-4">
-
-                    <div class="mt-5 pt-5">
-                        <input type="file" name="" id='input_file' hidden>
-                        <button class="upload_csv p-2 mx-4"  onclick="open_file()">
-                            <img src="images/upload.svg" />
-                            <span class="upload_span">
-                                Upload csv
-                            </span>
-                        </button>
-                    </div>
-                    <div class="mt-5 mx-4 bottom-0 ">
-                        <button type="submit" class="submit_button px-5 text-white ">Submit</button>
-                    </div>
-
-                    <!-- MODAL -->
-
-                </div>
-            </div>
-
-
-            <div class="col-lg-6 input_metric_card ">
-                <div class=" col-10 input_metric_card">
-                    <div class="">
-                        <span class="mt-1 date">Plant Name</span>
-                    </div>
-                    <div>
-                        <form class="">
-                            <input type="email" class="input_bar col-12" id="exampleInputEmail1"
-                                aria-describedby="emailHelp" />
+                <div class="mx-0 col-5">
+                    <div class="mb-4">
+                        <h5>Enter Order Number</h5>
+                        <form class="d-flex justify-content-start">
+                            <input type="email" class="input_bar col-7 justify-content-center d-flex"
+                                id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter Order Number"
+                                style="height: 35px" />
                         </form>
                     </div>
-                    <div class="col-12">
+                    <div class="d-flex">
+                        <span class=" fw-normal">Capacity</span>
 
-                        <div class="card p-lg-2 col-12">
-
-                            <span class="total_cost">Total Cost</span>
-                        </div>
-                        <div class="col-12 mx-5 mt-lg-3">
-                            <div class="card mb-2 col-10 mx-auto">
-                                <li class="li_tabs col-10 mx-3">Yield Cost</li>
-                            </div>
-                            <div class="card mb-2 col-10 mx-auto">
-                                <li class="li_tabs col-10 mx-3">Labour Cost</li>
-                            </div>
-                            <div class="card col-10 mx-auto">
-                                <li class="li_tabs col-10 mx-3 ">Shipping Cost</li>
-                            </div>
-                        </div>
-
-
-                    </div>
-                    <div class="mt-5 pt-5 mx-3 mb-0 total">
-                        <p class="mb-0">Total Savings</p>
-                        <p>Solver Note</p>
-
-                    </div>
-                    <div class="mt-3 mx-4 d-flex col-12 justify-content-end">
-                        <button class="upload_csv p-2 mx-4">
-                            <img src="images/upload.svg" />
-                            <span class="upload_span">
-                                Download csv
-                            </span>
-                        </button>
+                        <form class="col-5">
+                            <input type="email" class="input_bar col-3" id="exampleInputEmail1"
+                                aria-describedby="emailHelp" placeholder="0.5" />
+                        </form>
                     </div>
                 </div>
-
+                <!-- Date Range -->
+                <div class="col-4">
+                    <p class="fw-normal">Date Range</p>
+                    <div class="input-group input-daterange col-5 text-center d-flex justify-content-between" id="datepicker">
+                        <span class="col-5  p-0 px-0">
+                            <input type="text" class="input_bar form-control date" id="datepicker" aria-describedby=""
+                                placeholder="MM/DD/YYYY" />
+                        </span>
+                        <span class="text-center input-group-addon">to</span>
+                        <span class="col-5 text-center">
+                            <input type="text" class="input_bar form-control date" id="datepicker" aria-describedby=""
+                                placeholder="MM/DD/YYYY" />
+                        </span>
+                    </div>
+                </div>
+                <div class="col-5">
+                    <div>
+                        <input type="file" name="" id='input_file' hidden>
+                        <button class="upload_button col-5 text-center mb-5" onclick="open_file()">
+                            <img src="images/upload.svg" class="pt-3" />
+                            <p>
+                                Upload csv
+                            </p>
+                        </button>
+                    </div>
+                    <div class="col-5" style="cursor: pointer;">
+                        <button type="submit" class="submit_button px-5 text-white ">Submit</button>
+                    </div>
+                </div>
             </div>
-            <div class="circle bg-success justify-content-end  d-flex food_image two"></div>
+        </div>
+        <div class="mt-5">
+            <p class="mx-5 px-4 input_metric">Output Metric</p>
+        </div>
+        <div class=" col-lg-10 mx-auto  p-0">
+            <table class="table table-bordered table-hover">
+                <thead class="">
+                    <tr class="table_headings fw-light">
+                        <th>Order Number</th>
+                        <th>Plant ID</th>
+                        <th>Yield Cost</th>
+                        <th>Labor Cost</th>
+                        <th>Shipping Cost</th>
+                        <th>Total Cost</th>
+                        <th>Total Savings</th>
+                        <th>Solver Note</th>
+                    </tr>
+                </thead>
+                <tbody class="">
+                    <tr class="light_blue_row">
+                        <th class="text-center">--</th>
+                        <td class="text-center">--</td>
+                        <td class="text-center">--</td>
+                        <td class="text-center">--</td>
+                        <td class="text-center">--</td>
+                        <td class="text-center">--</td>
+                        <td class="text-center">--</td>
+                        <td class="text-center">--</td>
+
+                    </tr>
+                    <tr class="bg-white">
+                        <th class="text-center" scope="row">--</th>
+                        <td class="text-center">--</td>
+                        <td class="text-center">--</td>
+                        <td class="text-center">--</td>
+                        <td class="text-center">--</td>
+                        <td class="text-center">--</td>
+                        <td class="text-center">--</td>
+                        <td class="text-center">--</td>
+
+                    </tr>
+                    <tr class="light_blue_row">
+                        <th class="text-center" scope="row">--</th>
+                        <td class="text-center">--</td>
+                        <td class="text-center">--</td>
+                        <td class="text-center">--</td>
+                        <td class="text-center">--</td>
+                        <td class="text-center">--</td>
+                        <td class="text-center">--</td>
+                        <td class="text-center">--</td>
+
+                    </tr>
+                    <tr class="bg-white">
+                        <th class="text-center" scope="row">--</th>
+                        <td class="text-center">--</td>
+                        <td class="text-center">--</td>
+                        <td class="text-center">--</td>
+                        <td class="text-center">--</td>
+                        <td class="text-center">--</td>
+                        <td class="text-center">--</td>
+                        <td class="text-center">--</td>
+
+                    </tr>
+                    <tr class="light_blue_row">
+                        <th class="text-center" scope="row">--</th>
+                        <td class="text-center">--</td>
+                        <td class="text-center">--</td>
+                        <td class="text-center">--</td>
+                        <td class="text-center">--</td>
+                        <td class="text-center">--</td>
+                        <td class="text-center">--</td>
+                        <td class="text-center">--</td>
+
+                    </tr>
+                </tbody>
+
+            </table>
+        </div>
+
+        <div class="mt-5 d-flex col-11 justify-content-end" style="cursor: pointer;">
+            <button class="upload_csv p-2 mx-4">
+                <img src="images/upload.svg" />
+                <span class="upload_span">
+                    Download csv
+                </span>
+            </button>
+        </div>
+
+
+
+
+
+
+
 
     </main>
     <script type="text/javascript">
         $(function () {
-            $('#datepicker').datepicker();
+            $("#datepicker").datepicker();
         });
         function open_file() {
-            document.getElementById('input_file').click();
+            document.getElementById("input_file").click();
         }
-        // $('#myModal').on('shown.bs.modal', function () {
-        //     $('#myInput').trigger('focus')
-        // })
     </script>
 </body>
 
