--- a/Main/index.html
+++ b/Main/index.html
@@ -29,24 +29,24 @@
         </div>
 
         <div class="card col-lg-11 mx-auto">
-            <div class="d-flex gap-0">
+            <form class="d-flex gap-0" id="order">
 
                 <div class="mx-0 col-5">
                     <div class="mb-4">
                         <h5>Enter Order Number</h5>
-                        <form class="d-flex justify-content-start">
-                            <input type="email" class="input_bar col-7 justify-content-center d-flex"
-                                id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter Order Number"
+                        <div class="d-flex justify-content-start">
+                            <input type="text" class="input_bar col-7 justify-content-center d-flex" required
+                                id="orderNumber" aria-describedby="emailHelp" placeholder="Enter Order Number"
                                 style="height: 35px" />
-                        </form>
+                        </div>
                     </div>
                     <div class="d-flex">
                         <span class=" fw-normal">Capacity</span>
 
-                        <form class="col-5">
-                            <input type="email" class="input_bar col-3" id="exampleInputEmail1"
+                        <div class="col-5">
+                            <input type="number" class="input_bar col-3" id="orderCapacity" required step="any"
                                 aria-describedby="emailHelp" placeholder="0.5" />
-                        </form>
+                        </div>
                     </div>
                 </div>
                 <!-- Date Range -->
@@ -54,13 +54,13 @@
                     <p class="fw-normal">Date Range</p>
                     <div class="input-group input-daterange col-5 text-center d-flex justify-content-between" id="datepicker">
                         <span class="col-5  p-0 px-0">
-                            <input type="text" class="input_bar form-control date" id="datepicker" aria-describedby=""
-                                placeholder="MM/DD/YYYY" />
+                            <input type="text" class="input_bar form-control date" id="startDate" required aria-describedby=""
+                                placeholder="DD/MM/YYYY" />
                         </span>
                         <span class="text-center input-group-addon">to</span>
                         <span class="col-5 text-center">
-                            <input type="text" class="input_bar form-control date" id="datepicker" aria-describedby=""
-                                placeholder="MM/DD/YYYY" />
+                            <input type="text" class="input_bar form-control date" id="endDate" required aria-describedby="null"
+                                placeholder="DD/MM/YYYY" data-date-format='DD/MM/YYYYY' />
                         </span>
                     </div>
                 </div>
@@ -78,7 +78,7 @@
                         <button type="submit" class="submit_button px-5 text-white ">Submit</button>
                     </div>
                 </div>
-            </div>
+            </form>
         </div>
         <div class="mt-5">
             <p class="mx-5 px-4 input_metric">Output Metric</p>
@@ -97,7 +97,7 @@
                         <th>Solver Note</th>
                     </tr>
                 </thead>
-                <tbody class="">
+                <tbody class="" id="tableBody">
                     <tr class="light_blue_row">
                         <th class="text-center">--</th>
                         <td class="text-center">--</td>
@@ -166,23 +166,18 @@
                 </span>
             </button>
         </div>
-
-
-
-
-
-
-
-
     </main>
     <script type="text/javascript">
         $(function () {
-            $("#datepicker").datepicker();
+            $("#datepicker").datepicker({
+                format: 'dd/mm/yyyy',
+            });
         });
         function open_file() {
             document.getElementById("input_file").click();
         }
     </script>
+    <script src="script.js"></script>
 </body>
 
 </html>
