--- a/Main/index.html
+++ b/Main/index.html
@@ -1,128 +1,135 @@
 <!DOCTYPE html>
 <html lang="en">
+	<head>
+		<meta charset="UTF-8" />
+		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<meta name="description" content="" />
+		<link rel="stylesheet" type="text/css" href="styles.css" />
+		<title>Document</title>
+		<link
+			href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"
+			rel="stylesheet"
+			integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC"
+			crossorigin="anonymous"
+		/>
+		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.9.0/css/bootstrap-datepicker.min.css" />
+		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" />
+		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+		<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-alpha3/dist/js/bootstrap.bundle.min.js"></script>
+		<script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.9.0/js/bootstrap-datepicker.min.js"></script>
+	</head>
 
-<head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="description" content="" />
-    <link rel="stylesheet" type="text/css" href="styles.css" />
-    <title>Document</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous" />
-    <link rel="stylesheet"
-        href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.9.0/css/bootstrap-datepicker.min.css" />
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" />
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-alpha3/dist/js/bootstrap.bundle.min.js"></script>
-    <script
-        src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.9.0/js/bootstrap-datepicker.min.js"></script>
-</head>
+	<body class="">
+		<!-- The Modal -->
+		<div id="myModal" class="modal">
+			<!-- Modal content -->
+			<div class="modal-content">
+				<img src="images/loader.gif" class=" loader_img my-auto mx-auto" />
+				<p class="text-center">Fetching Optimizer Results......</p>
+			</div>
+		</div>
+		<img src="images/logo.svg" />
+		<header class="header mx-5 d-flex justify-content-start">
+			<h1 class="header">Pork Order Placement Optimization Dashboard</h1>
+		</header>
+		<main class="">
+			<div>
+				<p class="mx-5 px-4 input_metric">Input Metrics</p>
+			</div>
 
-<body class="">
-    <img src="images/logo.svg" />
-    <header class="header mx-5 col-12 d-flex justify-content-start">
-        <h1 class="header">Pork Order Placement Optimization Dashboard</h1>
-    </header>
-    <main class="">
-        <div>
-            <p class="mx-5 px-4 input_metric">Input Metrics</p>
-        </div>
+			<div class="card col-lg-11 mx-auto">
+				<form class="d-flex gap-0" id="order">
+					<div class="mx-0 col-5">
+						<div class="mb-4">
+							<h5>Enter Order Number</h5>
+							<div class="d-flex justify-content-start">
+								<input type="text" class="input_bar col-7 justify-content-center d-flex" required id="orderNumber" aria-describedby="emailHelp" placeholder="Enter Order Number" style="height: 35px" />
+							</div>
+						</div>
+						<div class="d-flex">
+							<span class="fw-normal">Capacity</span>
 
-        <div class="card col-lg-11 mx-auto">
-            <form class="d-flex gap-0" id="order">
+							<div class="col-5">
+								<input type="number" class="input_bar col-3" id="orderCapacity" required step="any" aria-describedby="emailHelp" placeholder="0.5" />
+							</div>
+						</div>
+					</div>
+					<!-- Date Range -->
+					<div class="col-4">
+						<p class="fw-normal">Date Range</p>
+						<div class="input-group input-daterange col-5 text-center d-flex justify-content-between" id="datepicker">
+							<span class="col-5 p-0 px-0">
+								<input type="text" class="input_bar form-control date" id="startDate" required aria-describedby="" placeholder="DD/MM/YYYY" />
+							</span>
+							<span class="text-center input-group-addon">to</span>
+							<span class="col-5 text-center">
+								<input type="text" class="input_bar form-control date" id="endDate" required aria-describedby="null" placeholder="DD/MM/YYYY" data-date-format="DD/MM/YYYYY" />
+							</span>
+						</div>
+					</div>
+					<div class="">
+						<div>
+							<input type="file" name="" id="input_file" hidden />
+							<div class="upload_button col-10 text-center mb-5" onclick="open_file()">
+								<img src="images/upload.svg" class="pt-3" />
+								<p>Upload csv</p>
+							</div>
+						</div>
+						<div class="col-5" style="cursor: pointer">
+							<button type="submit" class="submit_button px-5 text-white">Submit</button>
+						</div>
+					</div>
+				</form>
+			</div>
+			<div class="mt-5">
+				<p class="mx-5 px-4 input_metric">Output Metric</p>
+			</div>
+			<div class="col-lg-11 mx-auto p-0">
+				<table class="table table-bordered table-hover">
+					<thead class="">
+						<tr class="text-center fw-light border-0 bg-white">
+							<th class="border-0"></th>
+							<th class="border-0"></th>
+							<th class="border-0"></th>
+							<th class="border-0"></th>
+							<th class="border-0"></th>
+							<th class="border-0" id="totalCost"></th>
+							<th class="border-0"></th>
+							<th class="border-0"></th>
+						</tr>
+						 
+						<tr class="table_headings fw-light">
+							<th>Order Number</th>
+							<th>Plant ID</th>
+							<th>Yield Cost</th>
+							<th>Labor Cost</th>
+							<th>Shipping Cost</th>
+							<th>Total Cost</th>
+							<th>Total Savings</th>
+							<th>Solver Note</th>
+						</tr>
+					</thead>
+					<tbody class="" id="tableBody"></tbody>
+				</table>
+			</div>
 
-                <div class="mx-0 col-5">
-                    <div class="mb-4">
-                        <h5>Enter Order Number</h5>
-                        <div class="d-flex justify-content-start">
-                            <input type="text" class="input_bar col-7 justify-content-center d-flex" required
-                                id="orderNumber" aria-describedby="emailHelp" placeholder="Enter Order Number"
-                                style="height: 35px" />
-                        </div>
-                    </div>
-                    <div class="d-flex">
-                        <span class=" fw-normal">Capacity</span>
-
-                        <div class="col-5">
-                            <input type="number" class="input_bar col-3" id="orderCapacity" required step="any"
-                                aria-describedby="emailHelp" placeholder="0.5" />
-                        </div>
-                    </div>
-                </div>
-                <!-- Date Range -->
-                <div class="col-4">
-                    <p class="fw-normal">Date Range</p>
-                    <div class="input-group input-daterange col-5 text-center d-flex justify-content-between" id="datepicker">
-                        <span class="col-5  p-0 px-0">
-                            <input type="text" class="input_bar form-control date" id="startDate" required aria-describedby=""
-                                placeholder="DD/MM/YYYY" />
-                        </span>
-                        <span class="text-center input-group-addon">to</span>
-                        <span class="col-5 text-center">
-                            <input type="text" class="input_bar form-control date" id="endDate" required aria-describedby="null"
-                                placeholder="DD/MM/YYYY" data-date-format='DD/MM/YYYYY' />
-                        </span>
-                    </div>
-                </div>
-                <div class="col-5">
-                    <div>
-                        <input type="file" name="" id='input_file' hidden>
-                        <button class="upload_button col-5 text-center mb-5" onclick="open_file()">
-                            <img src="images/upload.svg" class="pt-3" />
-                            <p>
-                                Upload csv
-                            </p>
-                        </button>
-                    </div>
-                    <div class="col-5" style="cursor: pointer;">
-                        <button type="submit" class="submit_button px-5 text-white ">Submit</button>
-                    </div>
-                </div>
-            </form>
-        </div>
-        <div class="mt-5">
-            <p class="mx-5 px-4 input_metric">Output Metric</p>
-        </div>
-        <div class=" col-lg-11 mx-auto  p-0">
-            <table class="table table-bordered table-hover">
-                <thead class="">
-                    <tr class="table_headings fw-light">
-                        <th>Order Number</th>
-                        <th>Plant ID</th>
-                        <th>Yield Cost</th>
-                        <th>Labor Cost</th>
-                        <th>Shipping Cost</th>
-                        <th>Total Cost</th>
-                        <th>Total Savings</th>
-                        <th>Solver Note</th>
-                    </tr>
-                </thead>
-                <tbody class="" id="tableBody">
-                </tbody>
-
-            </table>
-        </div>
-
-        <div class="mt-5 d-flex col-11 justify-content-end" style="cursor: pointer;">
-            <button class="upload_csv p-2 mx-4">
-                <img src="images/upload.svg" />
-                <span class="upload_span">
-                    Download csv
-                </span>
-            </button>
-        </div>
-    </main>
-    <script type="text/javascript">
-        $(function () {
-            $("#datepicker").datepicker({
-                format: 'dd/mm/yyyy',
-            });
-        });
-        function open_file() {
-            document.getElementById("input_file").click();
-        }
-    </script>
-    <script src="script.js"></script>
-</body>
-
+			<div class="mt-5 d-flex col-11 justify-content-end" style="cursor: pointer">
+				<button class="upload_csv p-2 mx-4">
+					<img src="images/upload.svg" />
+					<span class="upload_span"> Download csv </span>
+				</button>
+			</div>
+		</main>
+		<script type="text/javascript">
+			$(function () {
+				$('#datepicker').datepicker({
+					format: 'dd/mm/yyyy',
+				});
+			});
+			function open_file() {
+				document.getElementById('input_file').click();
+			}
+		</script>
+		<script src="script.js"></script>
+	</body>
 </html>
